--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/loginFragment3"
-        android:name="android.example.shoestoreinventoryapp.screens.LoginFragment"
+        android:name="android.example.shoestoreinventoryapp.screens.login.LoginFragment"
         android:label="LoginFragment" />
 </navigation>
