--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/loginFragment3"
         android:name="android.example.shoestoreinventoryapp.screens.login.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_welcomeFragment"
+            app:destination="@id/welcomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/welcomeFragment"
+        android:name="android.example.shoestoreinventoryapp.screens.welcome.WelcomeFragment"
+        android:label="WelcomeFragment" />
 </navigation>
