Added information screen

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -15,5 +15,13 @@
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="android.example.shoestoreinventoryapp.screens.welcome.WelcomeFragment"
-        android:label="WelcomeFragment" />
+        android:label="WelcomeFragment" >
+        <action
+            android:id="@+id/action_welcomeFragment_to_informationFragment"
+            app:destination="@id/informationFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/informationFragment"
+        android:name="android.example.shoestoreinventoryapp.screens.information.InformationFragment"
+        android:label="InformationFragment" />
 </navigation>
