--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,10 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation"
-    app:startDestination="@id/loginFragment3">
+    app:startDestination="@id/loginFragment">
 
     <fragment
-        android:id="@+id/loginFragment3"
+        android:id="@+id/loginFragment"
         android:name="android.example.shoestoreinventoryapp.screens.login.LoginFragment"
         android:label="LoginFragment" >
         <action
