--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -30,6 +30,6 @@
     </fragment>
     <fragment
         android:id="@+id/shoeListFragment"
-        android:name="android.example.beerstoreinventoryapp.screens.list.ShoeListFragment"
+        android:name="android.example.beerstoreinventoryapp.screens.list.BeerListFragment"
         android:label="ShoeListFragment" />
 </navigation>
