Created beer detail UI

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
             android:id="@+id/tv_header_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="@dimen/header_margin_top"
             android:layout_marginBottom="32dp"
             android:text="Please sign in or register"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -26,8 +26,7 @@
             android:id="@+id/tv_email_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="@dimen/tv_margin_bottom"
             android:text="Email"
             app:layout_constraintBottom_toTopOf="@+id/et_email"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
@@ -41,7 +40,7 @@
             android:id="@+id/et_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/tv_margin_bottom"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toTopOf="@+id/tv_password_label"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
@@ -52,7 +51,7 @@
             android:id="@+id/tv_password_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="@dimen/tv_margin_bottom"
             android:text="Password"
             app:layout_constraintBottom_toTopOf="@+id/et_password"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
