--- a/app/src/main/res/layout/fragment_beer_list.xml
+++ b/app/src/main/res/layout/fragment_beer_list.xml
@@ -12,6 +12,7 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/shoe_list_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -25,6 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TV1" />
+
             </LinearLayout>
 
         </ScrollView>
