--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -26,7 +26,9 @@
         android:label="InformationFragment" >
         <action
             android:id="@+id/action_informationFragment_to_beerListFragment"
-            app:destination="@id/beerListFragment" />
+            app:destination="@id/beerListFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/beerListFragment"
