--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@android:color/holo_orange_dark" />
-    <stroke android:width="7dip" android:color="#4fa5d5"/>
+    <solid android:color="@color/beige" />
+    <stroke android:width="7dip" android:color="@color/light_orange"/>
 </shape>
