--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EEDEC6">
 
         <TextView
             android:id="@+id/tv_header_login"
@@ -108,7 +109,9 @@
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_login_info"
-            app:layout_constraintVertical_bias="0.109" />
+            app:layout_constraintVertical_bias="0.109"
+            android:background="@drawable/button_border"
+            android:backgroundTint="#B89561"/>
 
         <Button
             android:id="@+id/btn_register"
@@ -118,7 +121,10 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/btn_login"
-            app:layout_constraintTop_toTopOf="@+id/btn_login" />
+            app:layout_constraintTop_toTopOf="@+id/btn_login"
+            android:background="@drawable/button_border"
+            android:backgroundTint="#EBBF7C"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
