--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,16 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="dark_brown">#251715</color>
+    <color name="brown">#5D352D</color>
+    <color name="dark_orange">#CA7E19</color>
+    <color name="light_orange">#EBB359</color>
+    <color name="beige">#CDB49F</color>
+    <color name="light_beige">#E3D7CD</color>
+    <color name="light_gray">#969696</color>
+    <color name="dusty_rose">#E9B9AD</color>
+    <color name="mauve">#C69A7E</color>
+    <color name="light_brown">#E5B17F</color>
+    <color name="pastel_yellow">#FFDA9B</color>
 </resources>
