--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#6B5739</item>
+<!--        <item name="colorPrimary">@color/brown</item>-->
+        <item name="colorPrimaryDark">#4F402A</item>
+        <item name="colorAccent">@color/dusty_rose</item>
     </style>
 
     <style name="listElement">
@@ -12,9 +13,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">casual</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/dark_brown</item>
         <item name="android:textSize">24sp</item>
         <item name="android:padding">30dp</item>
         <item name="android:background">@drawable/textview_border</item>
     </style>
+
+
 
 </resources>
