--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -6,15 +6,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EEDEC6">
 
         <TextView
             android:id="@+id/tv_header_information"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/header_margin_top"
-            android:text="@string/Instructions"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:text="@string/instructions"
+            android:textAppearance="@style/header_style"
             app:layout_constraintBottom_toTopOf="@+id/tv_description"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -25,7 +26,7 @@
             android:id="@+id/tv_instructions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/description"
+            android:text="@string/instructions_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +57,10 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
-            app:layout_constraintVertical_bias="0.16000003" />
+            app:layout_constraintVertical_bias="0.16000003"
+            android:background="@drawable/button_border"
+            android:backgroundTint="#EBBF7C"
+            android:textAllCaps="false"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
