--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -22,8 +22,8 @@
     </fragment>
     <fragment
         android:id="@+id/instructionsFragment"
-        android:name="android.example.beerstoreinventoryapp.screens.information.InformationFragment"
-        android:label="InnstructionsFragment">
+        android:name="android.example.beerstoreinventoryapp.screens.information.InstructionsFragment"
+        android:label="InstructionsFragment">
         <action
             android:id="@+id/action_informationFragment_to_beerListFragment"
             app:destination="@id/beerListFragment"
