--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#6B5739</item>
-<!--        <item name="colorPrimary">@color/brown</item>-->
-        <item name="colorPrimaryDark">#4F402A</item>
+        <item name="colorPrimary">@color/light_brown</item>
+        <item name="colorPrimaryDark">@color/brown</item>
         <item name="colorAccent">@color/dusty_rose</item>
     </style>
 
@@ -19,6 +18,41 @@
         <item name="android:background">@drawable/textview_border</item>
     </style>
 
+    <style name="header_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/header_margin_top</item>
+        <item name="android:layout_marginBottom">32dp</item>
+        <item name="android:fontFamily">@font/special_elite</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textColor">@color/dark_brown</item>
+    </style>
+
+    <style name="text_label_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/tv_margin_bottom</item>
+        <item name="android:fontFamily">@font/special_elite</item>
+    </style>
+
+    <style name="warning_label_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:lines">2</item>
+        <item name="android:textColor">#B8382F</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="button_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:background">@drawable/button_border</item>
+        <item name="android:fontFamily">@font/special_elite</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 
 </resources>
