--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -11,12 +11,8 @@
 
         <TextView
             android:id="@+id/tv_header_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/header_margin_top"
-            android:fontFamily="@font/special_elite"
+            style="@style/header_style"
             android:text="@string/welcome"
-            android:textAppearance="@style/header_style"
             app:layout_constraintBottom_toTopOf="@+id/tv_description"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -25,9 +21,7 @@
 
         <TextView
             android:id="@+id/tv_description"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/special_elite"
+            style="@style/description_label_style"
             android:text="@string/welcome_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
@@ -52,15 +46,13 @@
 
         <Button
             android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="next"
+            style="@style/button_style"
+            android:backgroundTint="@color/mauve"
+            android:text="@string/next_btn_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
-            android:background="@drawable/button_border"
-            android:backgroundTint="@color/mauve"
             app:layout_constraintVertical_bias="0.16000003" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
