--- a/app/src/main/res/layout/fragment_instructions.xml
+++ b/app/src/main/res/layout/fragment_instructions.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
@@ -11,11 +10,8 @@
 
         <TextView
             android:id="@+id/tv_header_information"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/header_margin_top"
+            style="@style/header_style"
             android:text="@string/instructions"
-            android:textAppearance="@style/header_style"
             app:layout_constraintBottom_toTopOf="@+id/tv_description"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -24,8 +20,7 @@
 
         <TextView
             android:id="@+id/tv_instructions"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="@style/description_label_style"
             android:text="@string/instructions_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
@@ -50,17 +45,14 @@
 
         <Button
             android:id="@+id/btn_got_it"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="got it"
+            style="@style/button_style"
+            android:text="@string/got_it_btn_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
             app:layout_constraintVertical_bias="0.16000003"
-            android:background="@drawable/button_border"
-            android:backgroundTint="#EBBF7C"
-            android:textAllCaps="false"/>
+            android:backgroundTint="@color/pastel_orange" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
