--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,5 +62,11 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="background_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/ecru</item>
+    </style>
+
 
 </resources>
