--- a/app/src/main/res/layout/fragment_beer_detail.xml
+++ b/app/src/main/res/layout/fragment_beer_detail.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#EEDEC6">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="beerViewModel"
             type="android.example.beerstoreinventoryapp.BeerViewModel" />
     </data>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ScrollView style="@style/background_style">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -20,11 +17,9 @@
 
             <TextView
                 android:id="@+id/tv_header"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/header_style"
                 android:layout_marginTop="24dp"
                 android:text="Add a new beer"
-                android:textAppearance="@style/header_style"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -33,11 +28,9 @@
 
             <TextView
                 android:id="@+id/tv_name"
-                android:layout_width="0dp"
-                android:layout_height="19dp"
+                style="@style/text_label_style"
                 android:layout_marginTop="@dimen/tv_margin_top"
-                android:layout_marginBottom="8dp"
-                android:text="Name"
+                android:text="@string/name_label"
                 app:layout_constraintBottom_toTopOf="@+id/et_name"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -50,19 +43,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:text="@={beerViewModel.beer.name}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
-                app:layout_constraintTop_toBottomOf="@+id/tv_name"
-                android:text="@={beerViewModel.beer.name}"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
             <TextView
                 android:id="@+id/tv_type"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                style="@style/text_label_style"
                 android:layout_marginTop="@dimen/tv_margin_top"
-                android:layout_marginBottom="@dimen/tv_margin_bottom"
-                android:text="Type"
+                android:text="@string/type_text"
                 app:layout_constraintBottom_toTopOf="@+id/et_type"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -74,19 +65,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:text="@={beerViewModel.beer.type}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
-                app:layout_constraintTop_toBottomOf="@+id/tv_type"
-                android:text="@={beerViewModel.beer.type}"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_type" />
 
             <TextView
                 android:id="@+id/tv_abv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                style="@style/text_label_style"
                 android:layout_marginTop="@dimen/tv_margin_top"
-                android:layout_marginBottom="@dimen/tv_margin_bottom"
-                android:text="Alcohol by volume"
+                android:text="@string/alcohol_by_volume_text"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -96,20 +85,18 @@
                 android:id="@+id/et_abv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
                 android:inputType="numberDecimal"
+                android:singleLine="true"
+                android:text="@={beerViewModel.beer.abv}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
-                app:layout_constraintTop_toBottomOf="@+id/tv_abv"
-                android:text="@={beerViewModel.beer.abv}"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_abv" />
 
             <TextView
                 android:id="@+id/tv_description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                style="@style/text_label_style"
                 android:layout_marginTop="@dimen/tv_margin_top"
-                android:layout_marginBottom="@dimen/tv_margin_bottom"
                 android:text="Description"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -121,42 +108,36 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
+                android:text="@={beerViewModel.beer.description}"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/guideline_left"
-                app:layout_constraintTop_toBottomOf="@+id/tv_description"
-                android:text="@={beerViewModel.beer.description}"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
             <Button
                 android:id="@+id/btn_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/button_style"
                 android:layout_marginBottom="16dp"
-                android:text="Cancel"
+                android:backgroundTint="@color/light_gray"
+                android:text="@string/cancel_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btn_save"
                 app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/btn_save"
-                app:layout_constraintVertical_bias="0.2"
-                android:background="@drawable/button_border"
-                android:backgroundTint="@color/light_gray"
-                android:textAllCaps="false"/>
+                app:layout_constraintVertical_bias="0.2" />
 
             <Button
                 android:id="@+id/btn_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Save"
+                style="@style/button_style"
+                android:backgroundTint="@color/mauve"
                 android:onClick="@{() -> beerViewModel.addBeerToList()}"
+                android:text="@string/save_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btn_cancel"
-                app:layout_constraintTop_toBottomOf="@+id/et_description"
-                android:textAllCaps="false"
-                android:background="@drawable/button_border"
-                android:backgroundTint="@color/mauve"/>
+                app:layout_constraintTop_toBottomOf="@+id/et_description" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_left"
@@ -171,7 +152,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.9" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
