--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/light_brown</item>
         <item name="colorPrimaryDark">@color/brown</item>
-        <item name="colorAccent">@color/dusty_rose</item>
+        <item name="colorAccent">@color/dark_orange</item>
     </style>
 
     <style name="listElement">
