--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<!--    Constraint Layout was used to obtain more flexibility in the UI and have a flatter view hierarchy-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loginConstraint"
@@ -19,13 +22,14 @@
         <TextView
             android:id="@+id/tv_email_label"
             style="@style/text_label_style"
+            android:layout_marginTop="16dp"
             android:text="@string/email_label"
             app:layout_constraintBottom_toTopOf="@+id/et_email"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_header_login"
-            app:layout_constraintVertical_bias="0.65999997"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
@@ -53,21 +57,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            app:layout_constraintBottom_toTopOf="@+id/tv_login_info"
+            app:layout_constraintBottom_toTopOf="@+id/btn_login"
             app:layout_constraintEnd_toStartOf="@+id/guideline_right"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />
 
-        <TextView
-            android:id="@+id/tv_login_info"
-            style="@style/warning_label_style"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.591" />
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_left"
@@ -86,6 +82,7 @@
         <Button
             android:id="@+id/btn_login"
             style="@style/button_style"
+            android:layout_marginTop="16dp"
             android:backgroundTint="@color/mauve"
             android:text="@string/login_btn_text"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -93,8 +90,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintTop_toBottomOf="@+id/tv_login_info"
-            app:layout_constraintVertical_bias="0.109" />
+            app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
         <Button
             android:id="@+id/btn_register"
