--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--Used LinearLayout since it's super simple and all I need to do in this layout is store 1 fragment-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
